--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "version": "0.0.0",
   "scripts": {
-    "build": "tsc && vite build && node tools/post-build.js",
+    "build": "rm -fr dist && tsc && vite build && node tools/post-build.js && cp src/popup.* dist/src/ && cp src/pico.blue.min.css dist/src/ && rm dist/assets/content-script-loader.content.js*",
     "lint": "npx semistandard --fix **/*.js"
   },
   "devDependencies": {
@@ -20,6 +20,6 @@
   "dependencies": {
     "@atproto/api": "^0.13.18",
     "@crxjs/vite-plugin": "^1.0.14",
-    "simple-statistics": "^7.8.7"
+    "date-fns": "^4.1.0"
   }
 }
