Fix up for Chrome Web Store submission

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,17 @@
 {
   "manifest_version": 3,
-  "name": "Bluesky Post Frequencies",
-  "description": "Shows a Bluesky profile's posting frequency summary",
-  "version": "1.0",
+  "name": "Bluesky User Activity Graph",
+  "description": "Shows a Bluesky user's activity graph embedded in their profile page",
+  "version": "1.0.1",
   "action": {
     "default_icon": "favicon.png",
     "default_popup": "src/popup.html"
+  },
+  "icons": {
+    "16": "bua-4-16.png",
+    "32": "bua-4-32.png",
+    "48": "bua-4-48.png",
+    "128": "bua-4-128.png"
   },
   "content_scripts": [
     {
